fix for overlaping layout

--- a/page.css
+++ b/page.css
@@ -5,14 +5,14 @@ body {
 }
 
 
-#container {
+#illustration {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 90%; 
+    width: 80%; 
     height: 100%;
     margin: 0 auto;
-    margin-left: 10%;
+    margin-left: 20%;
     overflow: visible;
 }
 
@@ -47,11 +47,6 @@ body {
 
 svg {
     overflow: visible;
-}
-
-.overlay {
-    fill: none;
-    pointer-events: all;
 }
 
 .link-a {
